# ad_gmsa_linux

./: .editorconfig  .gitignore  README.md  move_for_package_build.sh  move_for_package_build_undo.sh
cpp/: .gitignore  Makefile  cleanup_keytab.cpp  highest_kvno.cpp  krb5_guards.cpp  krb5_guards.hpp  krb_objects.cpp  krb_objects.hpp  make_keytab_entry.cpp
cpp/debian/: changelog  control  rules
python/: .gitignore  ad-gmsa-example.ini  ad_gmsa_example.ini  setup.cfg  setup.py
python/ad_gmsa/: config_file.py  core_config.py  ldap_query.py  password_blob.py  programs.py  update_keytabs.py  utils.py
python/debian/: ad-gmsa.ini  ad-gmsa.service  changelog  control  core_config.py  install  links  postinst  postrm  rules
