[metadata]
name = ad_gmsa
version = 0.0.1
description = Update Kerberos keytabs based on Microsoft Active Directory group managed service accounts

[options]
package_dir =
    ad_gmsa = ad_gmsa
packages = ad_gmsa
python_requires = >=3.6
setup_requires =
    wheel

[options.entry_points]
console_scripts =
    ad_gmsa_update_keytabs = ad_gmsa.update_keytabs:main
